--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+body {
+  padding: 0;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.game {
+  display: flex; 
+  flex-wrap: wrap;
+  align-items: center; 
+  max-width: 1000px;
+  margin: 100px auto; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.board {
+  width: 69%;
+  height: 500px;
+  border: 1px solid black; 
+  position: relative;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.active-board {
+  height: 400px;
+  width: 100%;
+}
+
+.disabled-board {
+  height: 100px;
+  width: 100%;
+}
+
+.score {
+  display: flex; 
+  width: 30%; 
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#letter {
+  position: absolute;
 }
