--- a/src/App.css
+++ b/src/App.css
@@ -28,12 +28,22 @@ body {
   width: 100%;
 }
 
-.score {
+.table {
   display: flex; 
   width: 30%; 
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  text-align: center;
+}
+
+.score, .lifepoints {
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+
+.score h3, .lifepoints h3 {
+  margin-bottom: 10px;
 }
 
 #letter {
