--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 body {
   padding: 0;
   margin: 0;
+  background-image: url('../src/images/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
 }
 
 .game {
@@ -13,11 +18,13 @@ body {
   align-items: center;
   max-width: 1000px;
   width: 100%;
+  background: white;
+  box-shadow: 0px 0px 20px 20px #0000006b;
 }
 
 .board {
   width: 69%;
-  border: 1px solid black;
+  border-right: 1px solid black;
 }
 
 .active-board {
